@@ -201,6 +201,7 @@ changes to languages because of Bugzilla reports.
 * (bug 52813) Preference "Show table of contents (for pages with more than
   3 headings)" was removed.
 * (bug 52810) Preference "Justify paragraphs" was removed.
+* (bug 52342) Preference "Remember my login" was removed.
 
 ==== Removed classes ====
 * FakeMemCachedClient (deprecated in 1.18)
